--- a/src/components/Wallet.css
+++ b/src/components/Wallet.css
@@ -15,7 +15,7 @@
     margin-bottom: 48px;
 }
 
-.wallet-tvs img {
+.wallet-tvs .svg {
     width: 23%;
 }
 
@@ -69,7 +69,7 @@
 }
 
 @media only screen and (max-width: 500px) {
-    .wallet-tvs img {
+    .wallet-tvs .svg {
         width: 47.5%;
         margin: 4px 4px 4px 4px;
     }
