--- a/src/components/Mission.css
+++ b/src/components/Mission.css
@@ -49,7 +49,7 @@
 
 }
 
-.mission-content-container img {
+.mission-content-container .svg {
     margin-bottom: 12px;
 }
 
@@ -72,7 +72,7 @@ a {
         align-items: center;
     }
 
-    .mission-content-container img {
+    .mission-content-container .svg {
         margin-right: 16px;
         width: 50%;
     }
@@ -90,7 +90,7 @@ a {
         align-items: center;
         align-content: center;
     }
-    .mission-content-container img {
+    .mission-content-container .svg {
         margin: 0 auto;
         width: 100%;
         max-width: 512px;
